--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
                             </div>
                             <div class="d-flex align-items-center me-3 opacity-70">
                                 <i class="bx bx-comment fs-lg me-1"></i>
-                                <span class="fs-sm">4</span>
+                                <span class="fs-sm">{{ hot.comments.all.count }}</span>
                             </div>
                             <div class="d-flex align-items-center opacity-70">
                                 <i class="bx bx-share-alt fs-lg me-1"></i>
@@ -91,7 +91,7 @@
                                                     </div>
                                                     <div class="d-flex align-items-center me-3">
                                                         <i class="bx bx-comment fs-lg me-1"></i>
-                                                        <span class="fs-sm">4</span>
+                                                        <span class="fs-sm">{{ post.comments.all.count }}</span>
                                                     </div>
                                                     <div class="d-flex align-items-center">
                                                         <i class="bx bx-share-alt fs-lg me-1"></i>
@@ -245,11 +245,7 @@
                                         </div>
                                         <div class="d-flex align-items-center me-3">
                                             <i class="bx bx-comment fs-lg me-1"></i>
-                                            <span class="fs-sm">7</span>
-                                        </div>
-                                        <div class="d-flex align-items-center">
-                                            <i class="bx bx-share-alt fs-lg me-1"></i>
-                                            <span class="fs-sm">4</span>
+                                            <span class="fs-sm">{{ post.comments.all.count }}</span>
                                         </div>
                                     </div>
                                 </div>
