--- a/templates/blog-single.html
+++ b/templates/blog-single.html
@@ -71,7 +71,7 @@
                             <i class="bx bxl-facebook"></i>
                         </a>
                         <a href="#" class="btn btn-icon btn-secondary btn-twitter me-2 mb-2">
-                            <i class="bx bxl-twitter"></i>
+                            <i class="bx bxl-github"></i>
                         </a>
                         <a href="#" class="btn btn-icon btn-secondary btn-instagram me-2 mb-2">
                             <i class="bx bxl-instagram"></i>
@@ -174,7 +174,7 @@
                                     <i class="bx bxl-facebook"></i>
                                 </a>
                                 <a href="#" class="btn btn-icon btn-secondary btn-twitter me-2 mb-2">
-                                    <i class="bx bxl-twitter"></i>
+                                    <i class="bx bxl-github"></i>
                                 </a>
                                 <a href="#" class="btn btn-icon btn-secondary btn-instagram me-2 mb-2">
                                     <i class="bx bxl-instagram"></i>
