--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -40,7 +40,7 @@
                     <ul class="navbar-nav me2-auto mb-2 mb-lg-0 ">
                         <li class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">
-                                <img src="{{ user.profile.avatar.url }}" class="d-block rounded-circle" width="50"
+                                <img src="{{ user.image.url }}" class="d-block rounded-circle" width="50"
                                      alt="John Doe"><span style="margin-left:10px;">@{{ user.username }}</span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu2">
