Post-list page added, Search method, Paginator, Post-list sidebar customized

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -180,6 +180,9 @@
     {% block footer %}
         {% include 'base/footer.html' %}
     {% endblock %}
+    {% block sidebar %}
+
+    {% endblock %}
 </main>
 
 <!-- Back to top button -->
