--- a/templates/blog-single.html
+++ b/templates/blog-single.html
@@ -8,7 +8,7 @@
                 <a href="{% url 'home' %}"><i class="bx bx-home-alt fs-lg me-1"></i>Home</a>
             </li>
             <li class="breadcrumb-item">
-                <a href="blog-list-with-sidebar.html">Blog</a>
+                <a href="post_list.html">Blog</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">Single Post</li>
         </ol>
@@ -190,7 +190,7 @@
     <section class="container mb-5 pt-md-4">
         <div class="d-flex flex-sm-row flex-column align-items-center justify-content-between mb-4 pb-1 pb-md-3">
             <h2 class="h1 mb-sm-0">Related Articles</h2>
-            <a href="blog-list-with-sidebar.html" class="btn btn-lg btn-outline-primary ms-4">
+            <a href="post_list.html" class="btn btn-lg btn-outline-primary ms-4">
                 All posts
                 <i class="bx bx-right-arrow-alt ms-1 me-n1 lh-1 lead"></i>
             </a>
