--- a/templates/home.html
+++ b/templates/home.html
@@ -258,7 +258,7 @@
 
         </div>
         <!-- Load more btn -->
-        <a href="#" class="btn btn-lg btn-outline-primary w-100">
+        <a href="{% url 'post_list' %}" class="btn btn-lg btn-outline-primary w-100">
             <i class="bx bx-down-arrow-alt me-2 lh-1 lead"></i>
             Show more
         </a>
