--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -18,7 +18,7 @@
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Posts</a>
                         <ul class="dropdown-menu">
-                            <li><a href="/" class="dropdown-item">Articles</a></li>
+                            <li><a href="{% url 'post_list' %}" class="dropdown-item">Articles</a></li>
                             <li><a href="#podcasts" class="dropdown-item">Podcasts</a></li>
                         </ul>
                     </li>
