--- a/templates/portfolio-single-project.html
+++ b/templates/portfolio-single-project.html
@@ -211,7 +211,7 @@
                                             <div class="mega-dropdown-column">
                                                 <h6 class="px-3 mb-2">Blog</h6>
                                                 <ul class="list-unstyled mb-3">
-                                                    <li><a href="blog-list-with-sidebar.html" class="dropdown-item py-1">List View with Sidebar</a></li>
+                                                    <li><a href="post_list.html" class="dropdown-item py-1">List View with Sidebar</a></li>
                                                     <li><a href="blog-grid-with-sidebar.html" class="dropdown-item py-1">Grid View with Sidebar</a></li>
                                                     <li><a href="blog-list-no-sidebar.html" class="dropdown-item py-1">List View no Sidebar</a></li>
                                                     <li><a href="blog-grid-no-sidebar.html" class="dropdown-item py-1">Grid View no Sidebar</a></li>
