Paginator added for comments

--- a/templates/about-v1.html
+++ b/templates/about-v1.html
@@ -256,7 +256,7 @@
                                                 no Sidebar</a></li>
                                             <li><a href="blog-simple-feed.html" class="dropdown-item py-1">Simple
                                                 Feed</a></li>
-                                            <li><a href="blog-single.html" class="dropdown-item py-1">Single Post</a>
+                                            <li><a href="post_detail.html" class="dropdown-item py-1">Single Post</a>
                                             </li>
                                             <li><a href="blog-podcast.html" class="dropdown-item py-1">Podcast</a></li>
                                         </ul>
