--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -57,7 +57,7 @@
                             <div class="row g-0">
                                 <div class="col-sm-5 position-relative bg-position-center bg-repeat-0 bg-size-cover rounded-3"
                                      style="background-image: url({{ post.thumbnail.url }}); min-height: 15rem;">
-                                    <a href="blog-single.html" class="position-absolute top-0 start-0 w-100 h-100"
+                                    <a href="post_detail.html" class="position-absolute top-0 start-0 w-100 h-100"
                                        aria-label="Read more"></a>
                                     <a href="#"
                                        class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
