--- a/templates/portfolio-single-project.html
+++ b/templates/portfolio-single-project.html
@@ -216,7 +216,7 @@
                                                     <li><a href="blog-list-no-sidebar.html" class="dropdown-item py-1">List View no Sidebar</a></li>
                                                     <li><a href="blog-grid-no-sidebar.html" class="dropdown-item py-1">Grid View no Sidebar</a></li>
                                                     <li><a href="blog-simple-feed.html" class="dropdown-item py-1">Simple Feed</a></li>
-                                                    <li><a href="blog-single.html" class="dropdown-item py-1">Single Post</a></li>
+                                                    <li><a href="post_detail.html" class="dropdown-item py-1">Single Post</a></li>
                                                     <li><a href="blog-podcast.html" class="dropdown-item py-1">Podcast</a></li>
                                                 </ul>
                                                 <h6 class="px-3 mb-2">Services</h6>
