--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -97,9 +97,7 @@
             <!-- Comments -->
             <div class="col-lg-9">
                 <!-- Comment -->
-                {% for comment in post.comments.all %}
-
-
+                {% for comment in comments %}
                     <div class="py-4">
                         <div class="d-flex align-items-center justify-content-between pb-2 mb-1">
                             <div class="d-flex align-items-center me-3">
@@ -119,7 +117,48 @@
                     </div>
                     <hr class="my-2">
                 {% endfor %}
-
+                {% if comments.has_other_pages %}
+                    <nav aria-label="Page navigation example" class="d-flex justify-content-start">
+                        <ul class="pagination justify-content-center pt-lg-3 pt-1">
+                            <li class="page-item">
+                                {% if comments.has_previous %}
+                                    <a href="?page={{ comments.previous_page_number }}" class="page-link">
+                                        <i class="bx bx-chevron-left mx-n1"></i>
+                                    </a>
+                                {% else %}
+                                    <a class="page-link">
+                                        <i class="bx bx-chevron-left mx-n1"></i>
+                                    </a>
+                                {% endif %}
+                            </li>
+                            {% for i in comments.paginator.page_range %}
+                                {% if comments.number == i %}
+                                    <li class="page-item active d-none d-sm-block" aria-current="page">
+                                        <span class="page-link">{{ i }}<span
+                                                class="visually-hidden">(current)</span></span>
+                                    </li>
+                                {% else %}
+                                    <li class="page-item d-none d-sm-block">
+                                        <a href="?page={{ i }}" class="page-link">{{ i }}</a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                            {% if comments.has_next %}
+                                <li class="page-item">
+                                    <a href="?page={{ comments.next_page_number }}" class="page-link">
+                                        <i class="bx bx-chevron-right mx-n1"></i>
+                                    </a>
+                                </li>
+                            {% else %}
+                                <li class="page-item">
+                                    <a class="page-link">
+                                        <i class="bx bx-chevron-right mx-n1"></i>
+                                    </a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </nav>
+                {% endif %}
                 <!-- Comment -->
             </div>
         </div>
