--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -16,11 +16,11 @@
                         <a href="/" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Posts</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="{% url 'post_list' %}" class="dropdown-item">Articles</a></li>
-                            <li><a href="#podcasts" class="dropdown-item">Podcasts</a></li>
-                        </ul>
+                        <a href="{% url 'post_list' %}" class="nav-link">Posts</a>
+{#                        <ul class="dropdown-menu">#}
+{#                            <li><a href="{% url 'post_list' %}" class="dropdown-item">Articles</a></li>#}
+{#                            <li><a href="#podcasts" class="dropdown-item">Podcasts</a></li>#}
+{#                        </ul>#}
                     </li>
                     <li class="nav-item dropdown">
                         <a href="/" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
